test/corpus/L1/positive/array-literal.st
"---
id: array-literal
kind: positive
phase: parse
layer: L1
spec: anexoA:array.literal
origin: spec-ANSI
section: array.literal
note: simple literal array with integer elements
---"
#(1 2 3)
