test/corpus/L1/negative/unclosed-array.st
"---
id: unclosed-array
kind: negative
phase: parse
layer: L1
spec: anexoA:error.unclosed-array
origin: spec-ANSI
section: error.unclosed-array
note: literal array missing closing paren
codes: E_UNCLOSED_ARRAY
---"
#(1 2
